--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "lshort-portuguese.doc.tar.xz": e1cc6aa9bd90b19e10335e0564b84de6a8c6b579
-  "lshort-portuguese.tar.xz": 6966935148055ed66332747165dba69e85b6f33c
+  lshort-portuguese.doc.r55643.tar.xz: ce7c28a8c6e5abfd9a07d28253ae11780505bfcd
+  lshort-portuguese.r55643.tar.xz: cd8814b467e59280e8fdc2aea032f09fcb7d8d08
